# delta

./: .editorconfig  .gitmodules  CMakeLists.txt  stats.csv
Ddelta/: CMakeLists.txt  ddelta.cc  ddelta.h  spooky.cpp
EDelta/: CMakeLists.txt  edelta.cc  edelta.h  htable.cc  htable.h  md5.h  util.h
Gdelta/: gdelta.cpp  gdelta.h  gdelta_old.cpp
edelta/: CMakeLists.txt
fallback/: CMakeLists.txt  fallBack.cpp  gear_matrix.h
fdelta/: CMakeLists.txt  fdelta.cc  fdelta.h  fdelta_commands.hpp  fdelta_interface.h
scripts/: plot_fdelta_cdfs.py
src/: chunker.cpp  chunker.hpp  decode.hpp  delta.h  main.cpp  main_decode.cpp
src/encoders/: ddelta_encoder.cc  ddelta_encoder.h  edelta_encoder.cc  edelta_encoder.h  encoder.h  fdelta_encoder.cc  fdelta_encoder.h  gdelta_encoder.cc  gdelta_encoder.h  xdelta_encoder.cc  xdelta_encoder.h  zdelta_encoder.cc  zdelta_encoder.h
xdelta3/: CMakeLists.txt  xdelta3.c
zdelta/: CMakeLists.txt
